@@ -243,7 +243,7 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <useModulePath>false</useModulePath>
-                        <argLine>-Dnet.bytebuddy.experimental=${bytebuddy.experimental}</argLine>
+                        <argLine>-Dnet.bytebuddy.experimental=${bytebuddy.experimental} --sun-misc-unsafe-memory-access=allow</argLine>
                         <!-- In multi-module alcuni moduli non hanno test: non fallire la build -->
                         <failIfNoTests>false</failIfNoTests>
                     </configuration>
